# profile_service

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: profile_service_docker.yml
src/: dynamodb.rs  main.rs
src/models/: profile.rs  profile_request.rs
