[package]
name = "profile_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
aws-config = "1.5.13"
aws-sdk-dynamodb = "1.56.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
tracing-subscriber = "0.3.19"
